--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "firebase": "^10.7.2",
+    "google-map-react": "^2.2.1",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
