--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,19 @@
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "fs": "^0.0.1-security",
+    "moment-timezone": "^0.5.46",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3"
+    "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.0.3",
+    "razorpay": "^2.9.5",
+    "react-router-dom": "^7.0.1"
   }
 }
