--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,7 +6,11 @@
     "routes": [
         {
           "src": "/(.*)",
-          "dest": "/"
+          "dest": "/",
+            "methods":['GET','POST','PUT'],'DELETE','PATCH','OPTIONS'],
+            "headers":{
+                "Access-control-Allow-Origin":"*"
+            }
         }
     ]
   }
