--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,7 +7,7 @@
         {
           "src": "/(.*)",
           "dest": "/",
-            "methods":['GET','POST','PUT'],'DELETE','PATCH','OPTIONS'],
+            "methods":['GET','POST','PUT','DELETE','PATCH','OPTIONS'],
             "headers":{
                 "Access-control-Allow-Origin":"*"
             }
