--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "this is a backend of internshala ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js", 
+    "build": "cd frontend && npm run build"
+    
   },
   "proxy": "https://intern-8hmo.vercel.app"
 
