--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "this is a backend of internshala",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js", 
-    "build": "cd frontend && npm run build"
+    "start": "node index.js"
+
   },
   "author": "ankit",
   "license": "ISC",
