--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -7,7 +7,7 @@
   ],
   "builds": [
     {
-      "src": "index.html",
+      "src": "public/index.html",
       "use": "@vercel/static"
     }
   ]
