--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,3 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "builds": [
-    {
-      "src": "public/index.html",
-      "use": "@vercel/static"
-    }
-  ]
-}
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  }
